--- a/src/components/Grid.astro
+++ b/src/components/Grid.astro
@@ -2,9 +2,9 @@
 import GridSVG from "@/assets/grid.svg";
 ---
 
-<div>
+<div class="relative">
   <GridSVG
-    class="grid w-full absolute top-0 left-0 -z-0 object-cover opacity-50"
+    class="absolute inset-0 -top-3 w-full -z-0 object-cover pointer-events-none"
   />
   <slot />
 </div>
