--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title, description, image = "/og.jpg", canonical } = Astro.props;
       canonical={canonical}
     />
   </head>
-  <body class="">
+  <body class="overflow-x-hidden w-full">
     <div class="w-[100%] md:w-[55%] mx-auto grid place-content-center">
       <slot />
     </div>
@@ -50,20 +50,6 @@ const { title, description, image = "/og.jpg", canonical } = Astro.props;
       "Open Sans",
       "Helvetica Neue",
       sans-serif;
-    position: relative;
-    /* &::before {
-      content: "";
-      top: 0;
-      left: 0;
-      z-index: -1;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-
-      background-image: url("/bg.png");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    } */
+    /* position: relative; */
   }
 </style>
