refactor: restructure layout components for improved organization and styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,9 @@ import Footer from "@/sections/Footer.astro";
   <Background>
     <Hero />
     <Proyects />
-    <Skills />
-    <Footer />
+    <div class="overflow-y-hidden overflow-x-visible">
+      <Skills />
+      <Footer />
+    </div>
   </Background>
 </Layout>
