--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -1,22 +1,10 @@
-<footer class="flex items-center justify-around my-3">
-  <h3>made with 💜 by ACBC</h3>
-  <a
-    class="underline"
-    target="_blank"
-    href="https://x.com/educalvolpz/status/1866883202045882540"
-    >Inspired on
-  </a>
-</footer>
+---
+import Name from "@/assets/name.svg";
+---
 
-<style>
-  h3 {
-    position: relative;
-    /* &::before {
-      content: "Camilo Blandon";
-      position: absolute;
-      width: 200%;
-      height: 200%;
-      inset: 0;
-    } */
-  }
-</style>
+<footer class="h-24 mt-10">
+  <div class="flex flex-col items-center justify-center gap-y-2 text-center">
+    <span class="z-10 text-sm mx-auto"> Hecho con 💜 por ACBC </span>
+    <Name class={"w-full"} />
+  </div>
+</footer>
