--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -1,64 +1,41 @@
 ---
-import { Button } from "@/components/ui/button";
+// import { Button } from "@/components/ui/button";
 import GithubSvg from "@/svg/github.svg";
 import LinkedinSvg from "@/svg/linkedin.svg";
+import Button from "@/components/Button.astro";
+import Grid from "@/components/Grid.astro";
 ---
 
-<section
-  class="my-20 flex flex-col px-4 md:px-10 items-start justify-center gap-y-5"
->
-  <header>
-    <h1 class="text-4xl font-bold">
-      Hi<br /> I'm a Camilo Blandon
-    </h1>
-  </header>
-  <section class="text-muted-foreground">
-    <p>
-      I'm a frontend developer with a strong passion for building scalable and
-      high-quality applications using modern technologies like React, Next.js,
-      and TypeScript. I focus on performance optimization, responsive design,
-      and writing maintainable code to deliver robust and efficient solutions. I
-      am always eager to learn new technologies and take on challenging projects
-      while adapting to diverse work environments.
-    </p>
-  </section>
+<Grid>
+  <section
+    class="my-20 flex flex-col px-4 md:px-10 items-start justify-center gap-y-5"
+  >
+    <header>
+      <h1 class="text-4xl font-bold">
+        Hi<br /> I'm a Camilo Blandon
+      </h1>
+    </header>
+    <section class="text-muted-foreground">
+      <p>
+        I'm a frontend developer with a strong passion for building scalable and
+        high-quality applications using modern technologies like React, Next.js,
+        and TypeScript. I focus on performance optimization, responsive design,
+        and writing maintainable code to deliver robust and efficient solutions.
+        I am always eager to learn new technologies and take on challenging
+        projects while adapting to diverse work environments.
+      </p>
+    </section>
 
-  <footer class="flex gap-x-2">
-    <Button className="btn">
-      <a
-        href="https://www.linkedin.com/in/acbc-dev/"
-        class="inline-flex gap-x-1"
-        >Linkedin <LinkedinSvg class="fill-white" /><a> </a>
+    <footer class="flex gap-x-2">
+      <a href="https://www.linkedin.com/in/acbc-dev/">
+        <Button> Linkedin <LinkedinSvg class="fill-white" /></Button>
       </a>
-    </Button>
-    <Button className="btn">
-      <a class="inline-flex gap-x-1" href="https://github.com/acbcdev"
-        >GitHub <GithubSvg /></a
-      >
-    </Button>
-  </footer>
-</section>
 
-<style>
-  .btn {
-    --primary: #2d2154;
-    background-color: var(--background);
-    color: var(--foreground);
-
-    background: radial-gradient(
-      100% 100% at 50% 70%,
-      var(--primary) 0%,
-      transparent 70%
-    );
-    transition-duration: 200ms;
-    border: 1px solid rgba(58, 57, 59, 0.1);
-    border: 1px solid rgba(58, 57, 59, 0.1);
-    backdrop-filter: blur(60px);
-    box-shadow:
-      0 0 20px rgba(54, 53, 56, 0.15),
-      inset 0 0 20px rgba(130, 71, 229, 0.05);
-    &:hover {
-      scale: 1.1;
-    }
-  }
-</style>
+      <a href="https://github.com/acbcdev">
+        <Button>
+          GitHub <GithubSvg />
+        </Button>
+      </a>
+    </footer>
+  </section>
+</Grid>
