--- a/src/sections/Skills.astro
+++ b/src/sections/Skills.astro
@@ -1,7 +1,7 @@
 ---
 import Brain from "@/svg/brain.svg";
 import Title from "@/components/Title.astro";
-
+import Grid from "@/components/Grid.astro";
 interface skillType {
   src: string;
   name: string;
@@ -23,19 +23,21 @@ export const SkillsICons: skillType[] = [
 ];
 ---
 
-<section class="grid gap-10 my-10 px-4 md:px-10 mb-10">
-  <Title>
-    <Brain /> Skills
-  </Title>
+<Grid>
+  <section class="grid gap-10 my-10 px-4 md:px-10 mb-10">
+    <Title>
+      <Brain /> Skills
+    </Title>
 
-  <section class="flex flex-wrap gap-2">
-    {
-      SkillsICons.map(({ name, src }) => (
-        <div class="text-base md:text-xl hover:scale-105 duration-200 flex items-center justify-center gap-x-2  px-2  bg-gradient-to-r from-accent border-bg-dark py-1 rounded-lg border w-fit">
-          <img src={src} alt={name} class="size-6" />
-          {name}
-        </div>
-      ))
-    }
+    <section class="flex flex-wrap gap-2">
+      {
+        SkillsICons.map(({ name, src }) => (
+          <div class="text-base md:text-xl hover:scale-105 duration-200 flex items-center justify-center gap-x-2  px-2  bg-gradient-to-r from-accent border-bg-dark py-1 rounded-lg border w-fit">
+            <img src={src} alt={name} class="size-6" />
+            {name}
+          </div>
+        ))
+      }
+    </section>
   </section>
-</section>
+</Grid>
