--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -2,6 +2,7 @@
 // import { Button } from "@/components/ui/button";
 import GithubSvg from "@/svg/github.svg";
 import LinkedinSvg from "@/svg/linkedin.svg";
+import CVSVG from "@/svg/cv.svg";
 import Button from "@/components/Button.astro";
 import Grid from "@/components/Grid.astro";
 ---
@@ -34,6 +35,11 @@ import Grid from "@/components/Grid.astro";
       <a href="https://github.com/acbcdev">
         <Button>
           GitHub <GithubSvg />
+        </Button>
+      </a>
+      <a href="/cv.pdf" target="_blank">
+        <Button>
+          Resume <CVSVG />
         </Button>
       </a>
     </footer>
