fix: update CV icon import to use .astro file and adjust SVG dimensions

--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -2,7 +2,7 @@
 // import { Button } from "@/components/ui/button";
 import GithubSvg from "@/svg/github.svg";
 import LinkedinSvg from "@/svg/linkedin.svg";
-import CVSVG from "@/svg/cv.svg";
+import CVSVG from "@/svg/cv.astro";
 import Button from "@/components/Button.astro";
 import Grid from "@/components/Grid.astro";
 ---
