fix: update import and usage of ProyectsBento for correct project section display

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "@/layouts/Layout.astro";
 import Background from "@/components/Background.astro";
 import Hero from "@/sections/Hero.astro";
-import Proyects from "@/sections/Proyects.astro";
+import ProyectsBento from "@/sections/ProyectsBento.astro";
 import Skills from "@/sections/Skills.astro";
 import Footer from "@/sections/Footer.astro";
 ---
@@ -13,7 +13,7 @@ import Footer from "@/sections/Footer.astro";
 >
   <Background>
     <Hero />
-    <Proyects />
+    <ProyectsBento />
     <div class="overflow-y-hidden overflow-x-visible">
       <Skills />
       <Footer />
