fix: update border radius class for improved visual consistency in Skills section

--- a/src/sections/Skills.astro
+++ b/src/sections/Skills.astro
@@ -32,7 +32,7 @@ export const SkillsICons: skillType[] = [
     <section class="flex flex-wrap gap-2">
       {
         SkillsICons.map(({ name, src }) => (
-          <div class="text-base md:text-xl hover:scale-105 duration-200 flex items-center justify-center gap-x-2  px-2  bg-gradient-to-r from-accent border-bg-dark py-1 rounded-lg border w-fit">
+          <div class="text-base md:text-xl hover:scale-105 duration-200 flex items-center justify-center gap-x-2  px-2  bg-gradient-to-r from-accent border-bg-dark py-1 rounded-xl border w-fit">
             <img src={src} alt={name} class="size-6" />
             {name}
           </div>
