--- a/src/components/ui/card/CardTitle.astro
+++ b/src/components/ui/card/CardTitle.astro
@@ -7,10 +7,10 @@ interface Props {
 const { name, link, favicon } = Astro.props;
 ---
 
-<header>
+<header class="p-2 rounded-lg inline-block">
   <a href={link} target="_blank" class="flex items-center gap-x-2 group/title">
     {favicon && <img src={favicon} class="size-8" alt={`${link} favicon`} />}
-    <h2 class="text-2xl font-bold group-hover/title:underline">
+    <h2 class="text-2xl font-bold group-hover/title:underline text-foreground">
       {name}
     </h2>
   </a>
