--- a/src/components/ui/card/CardLinks.astro
+++ b/src/components/ui/card/CardLinks.astro
@@ -19,6 +19,7 @@ const { link, github } = Astro.props;
   <a
     href={github}
     target="_blank"
+    class="opacity-70 hover:opacity-100 duration-150"
     rel="noopener noreferrer"
     title="View GitHub repository"
   >
@@ -27,6 +28,7 @@ const { link, github } = Astro.props;
   <a
     href={link}
     target="_blank"
+    class="opacity-70 hover:opacity-100 duration-150"
     rel="noopener noreferrer"
     title="Visit live site"
   >
