--- a/src/components/ui/card/CardDescription.astro
+++ b/src/components/ui/card/CardDescription.astro
@@ -17,10 +17,7 @@ const {
 
 {
   !hiddenDescription && (
-    <p
-      class:list={[classDescription, "text-foreground/80 "]}
-      title={description}
-    >
+    <p class:list={[classDescription]} title={description}>
       {description}
     </p>
   )
