fix: update button border styles for improved visibility and consistency

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -5,7 +5,7 @@ type Props = HTMLAttributes<"button">;
 
 <button
   {...Astro.props}
-  class="inline-flex items-center cursor-pointer justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 px-4 py-2"
+  class="inline-flex border-border/5 items-center cursor-pointer justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 px-4 py-2"
 >
   <slot />
 </button>
@@ -21,8 +21,8 @@ type Props = HTMLAttributes<"button">;
       transparent 85%
     );
     transition-duration: 200ms;
-    border: 1px solid rgba(58, 57, 59, 0.1);
-    border: 1px solid rgba(58, 57, 59, 0.1);
+    border: 1px solid rgba(58, 57, 59, 0.568);
+    border: 1px solid rgba(58, 57, 59, 0.795);
     backdrop-filter: blur(60px);
 
     &:hover {
