--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -8,15 +8,13 @@ import Grid from "@/components/Grid.astro";
 ---
 
 <Grid>
-  <section
-    class="my-20 flex flex-col px-4 md:px-10 items-start justify-center gap-y-5"
-  >
+  <section class="my-20 flex flex-col px-4 items-start justify-center gap-y-5">
     <header>
       <h1 class="text-4xl font-bold">
         Hi<br /> I'm a Camilo Blandon
       </h1>
     </header>
-    <section class="text-muted-foreground">
+    <section class="text-card-foreground/90 max-w-[80ch]">
       <p>
         I'm a frontend developer with a strong passion for building scalable and
         high-quality applications using modern technologies like React, Next.js,
