--- a/src/sections/ProyectsBento.astro
+++ b/src/sections/ProyectsBento.astro
@@ -13,7 +13,7 @@ import Card from "@/components/ui/card/Card.astro";
     <WWW /> Projects
   </Title>
 
-  <div class="grid md:grid-cols-6 md:grid-rows-3 gap-4 z-10">
+  <div class="grid mt-6 md:grid-cols-6 md:grid-rows-3 gap-4 z-10">
     <Card className="md:col-span-6 p-6 " bgImage={projects[0].img}>
       <div class="flex items-center justify-between py-4">
         <CardTitle
