fix: adjust footer margin for improved spacing and update Skills section margin for better layout

--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -2,9 +2,11 @@
 import Name from "@/assets/name.svg";
 ---
 
-<footer class="h-24 mt-20">
-  <div class="flex flex-col items-center justify-center gap-y-2 text-center">
+<footer class="h-24 mt-48">
+  <div
+    class="flex flex-col items-center justify-center gap-y-2 text-center mt-5 mb-4"
+  >
     <span class="z-10 text-sm mx-auto"> Hecho con 💜 por ACBC </span>
-    <Name class={"w-full"} />
+    <Name class="w-full" />
   </div>
 </footer>
