fix: make link prop optional in Card and CardLinks components, update projects type definition

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,7 +4,7 @@ import LinkSvg from "@/svg/link.svg";
 import Image from "astro/components/Image.astro";
 
 type Props = {
-  link: string;
+  link?: string;
   img: string;
   name: string;
   description: string;
