--- a/src/components/ui/card/CardTitle.astro
+++ b/src/components/ui/card/CardTitle.astro
@@ -1,17 +1,24 @@
 ---
 interface Props {
   name: string;
-  link: string;
+  link?: string;
   favicon?: string;
 }
 const { name, link, favicon } = Astro.props;
+const Comp = link ? "a" : "span";
 ---
 
 <header class="p-2 rounded-lg inline-block">
-  <a href={link} target="_blank" class="flex items-center gap-x-2 group/title">
+  <Comp
+    href={link}
+    target="_blank"
+    class="flex items-center gap-x-2 group/title"
+  >
     {favicon && <img src={favicon} class="size-8" alt={`${link} favicon`} />}
-    <h2 class="text-2xl font-bold group-hover/title:underline text-foreground">
+    <h2
+      class={`text-2xl  font-bold ${link ? "group-hover/title:underline" : ""} text-foreground`}
+    >
       {name}
     </h2>
-  </a>
+  </Comp>
 </header>
