fix: update job title to Fullstack Developer in SEO and Hero components, adjust keywords for consistency

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import Footer from "@/sections/Footer.astro";
 ---
 
 <Layout
-  title="Camilo Blandon | Frontend Developer - Portfolio"
-  description="Descubre el portafolio de Camilo Blandon, Frontend Developer con experiencia en desarrollo web y aplicaciones modernas."
+  title="Camilo Blandon | FullStack Developer - Portfolio"
+  description="Descubre el portafolio de Camilo Blandon, FullStack Developer con experiencia en desarrollo web y aplicaciones modernas."
 >
   <Background>
     <Hero />
