--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -16,12 +16,12 @@ import Grid from "@/components/Grid.astro";
     </header>
     <section class="text-card-foreground/90 max-w-[80ch]">
       <p>
-        I'm a frontend developer with a strong passion for building scalable and
-        high-quality applications using modern technologies like React, Next.js,
-        and TypeScript. I focus on performance optimization, responsive design,
-        and writing maintainable code to deliver robust and efficient solutions.
-        I am always eager to learn new technologies and take on challenging
-        projects while adapting to diverse work environments.
+        I'm a fullstack developer with a strong passion for building scalable
+        and high-quality applications using modern technologies like React,
+        Next.js, and TypeScript. I focus on performance optimization, responsive
+        design, and writing maintainable code to deliver robust and efficient
+        solutions. I am always eager to learn new technologies and take on
+        challenging projects while adapting to diverse work environments.
       </p>
     </section>
 
