--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -22,7 +22,7 @@ const canonicalURL = new URL(determineCanonicalURL(), Astro.site);
 <link rel="icon" type="svg" href="/favicon.svg" />
 <meta
   name="keywords"
-  content="Camilo Blandon, frontend developer, web developer portfolio, ACBC, React developer, web development"
+  content="Camilo Blandon, Fullstack developer, web developer portfolio, ACBC, React developer, web development"
 />
 
 <meta name="theme-color" content="#202020" />
